<resources>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_567">567</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Calc</string>
    <string name="ask_exit_confirm">Are you sure you want to close the calculator ?</string>
    <string name="ask_exit_title">Closing App</string>
    <string name="author">Author</string>
    <string name="author_email">diego.cimarosa@gmail.com</string>
    <string name="calc">Calc</string>
    <string name="clear">CLEAR</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no">No</string>
    <string name="only_integer_numbers">Only integer numbers!!!</string>
    <string name="study_application">A study application</string>
    <string name="yes">Yes</string>
    <string name="divide_by_zero">Division by zero</string>
    <string name="info_rss">http://www.diegocimarosa.it/tag/calc-app/feed/</string>
    <string name="negative_result">Currently can\'t elaborate negative result</string>
    <string name="comma">,</string>
    <string name="_0">0</string>
</resources>
