<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.diegocimarosa.calc.Home">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/holo_blue_bright"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/resulText"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/only_integer_numbers"
            android:inputType="numberDecimal"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="80dp"
            android:text="@string/_567"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/transparent"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,UnusedAttribute" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:background="@android:color/background_light">


        <Button
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:text="@string/_7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:text="@string/_8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:text="@string/_9"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_divide"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:background="@android:color/white"
            android:contentDescription=""
            app:srcCompat="@drawable/divide"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@android:color/transparent"
            android:text="@string/_4"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@android:color/transparent"
            android:text="@string/_5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@android:color/transparent"
            android:text="@string/_6"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_multiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:background="@android:color/white"
            android:contentDescription=""
            app:srcCompat="@drawable/multiply"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@android:color/transparent"
            android:text="@string/_1"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@android:color/transparent"
            android:text="@string/_2"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="2"
            android:background="@android:color/transparent"
            android:text="@string/_3"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_minus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:background="@android:color/white"
            android:contentDescription=""
            app:srcCompat="@drawable/subtract"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@android:color/transparent"
            android:text="@string/clear"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@android:color/transparent"
            android:text="@string/comma"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_0"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@android:color/transparent"
            android:text="@string/_0"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/button_plus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:background="@android:color/white"
            android:contentDescription=""
            app:srcCompat="@drawable/add"
            tools:ignore="ContentDescription" />
    </GridLayout>

    <ImageButton
        android:id="@+id/button_equal"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="163dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/equal"
        tools:ignore="ContentDescription" />

</RelativeLayout>
